--- a/02-array-object-start/index.html
+++ b/02-array-object-start/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <title>02. JS Array & Objects</title>
-    <script scr="app.js" defer></script>
+    <script src="app_notes.js" defer></script>
   </head>
 
   <body class="bg-dark text-light">
